<resources>
    <string name="app_name">Story App</string>
    <string name="detail_app">Detail Story</string>
    <string name="add_app">Add Data</string>
    <string name="image_warning">Failed to Upload Image</string>

    <string name="complete_data">Complete Data</string>
    <string name="welcome_to_story_app">Welcome to Story App</string>
    <string name="login">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="fill_data_with_correct">Fill in Data Correctly</string>
    <string name="selamat_data_di_aplikas_story_app">Congratulations Data In Story App</string>
    <string name="story_app_in_android_intermediate_class">Story APP Application In Android Intermediate Class</string>
    <string name="button_add">Add button</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="logout">Logout</string>
    <string name="your_name">Your Name</string>
    <string name="settings">Settings</string>

    <string name="email_undenfined">Invalid Email</string>
    <string name="hint_email">example@mail.com</string>
    <string name="password_incorrect">Password cannot be less than 8 characters</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="retry">Retry</string>
    <string name="have_data">Data Display</string>
    <string name="no_data">Cant Read Data</string>

    <string name="title_confirm_logout">Logout Confirmed</string>
    <string name="question_logout">Are you sure?</string>
    <string name="logout_yes">YES</string>
    <string name="logout_no">NO</string>
    <string name="setlocation">Use This Location</string>
    <string name="unknowlocation">Unknown Location</string>
    <string name="permission">Permission Denied</string>
</resources>